# Diff_Drive_Platform

./: CMakeLists.txt  README.md  package.xml
include/: diff_drive.h  ekf.h  node.h  nodelet.h
include/odometry/: encoders.h  imu.h  state.h
include/odometry_ctrv/: encoders.h  state.h
launch /: launch_platform.launch
msg/: Imu.msg
ressources/: encoders.txt  ground_truth.txt  odometry_filtered.txt
scripts/: plot_ekf_odometry.py
src/: diff_drive.cpp  odometry.cpp
src/odometry/: encoders.cpp  imu.cpp  state.cpp
urdf/: body.xacro  robot.xacro  solids.xacro
urdf/platform/: platform.xacro  retrofit.xacro
urdf/plugins/: controller_plugins.xacro  lidar.xacro  sensors_plugins.xacro
urdf/sensors/: cameras.xacro  imu.xacro  lidar.xacro  realsense.xacro
